WEB-238 Mobile BizLic Table display - when table can no longer constrict horizontally, it'll now overflow to the right, with a scrollbar on just the table itself. Fuller approach later after launch.

--- a/numenta.com/components/TableCell/index.css
+++ b/numenta.com/components/TableCell/index.css
@@ -4,11 +4,7 @@
 }
 
 .tableCell {
-  composes: db from 'tachyons';
-  composes: dtc-ns from 'tachyons';
   composes: lh-title from 'tachyons';
   composes: pa2 from 'tachyons';
   composes: v-top from 'tachyons';
-  composes: w-100 from 'tachyons';
-  composes: w-auto-ns from 'tachyons';
 }
