--- a/numenta.com/pages/business-strategy-and-ip/index.css
+++ b/numenta.com/pages/business-strategy-and-ip/index.css
@@ -1,13 +1,3 @@
-._prefix dt::before {
-  content: 'Q: ';
-  font-weight: bold;
-}
-._prefix dd::before {
-  content: 'A: ';
-  font-weight: bold;
-}
-
-
 .columns {
   composes: layout-columns from '../../static/assets/css/theme.css';
 }
@@ -23,9 +13,15 @@
 }
 
 
-.faq {
-  composes: _prefix;
+.licenses {
+  composes: mb4 from 'tachyons';
+  composes: overflow-x-auto from 'tachyons';
+  composes: overflow-x-visible-ns from 'tachyons';
 }
+.licenses table {
+  margin-bottom: 0;
+}
+
 .faq h4 {
   font-size: 1rem;
   margin-top: 0.75rem;
