--- a/numenta.com/pages/htm-studio/index.css
+++ b/numenta.com/pages/htm-studio/index.css
@@ -16,18 +16,15 @@
 .columns {
   composes: layout-columns from '../../static/assets/css/theme.css';
 }
-
 .content {
   composes: layout-content from '../../static/assets/css/theme.css';
 }
-
 .aside {
   composes: mt2 from 'tachyons';
   composes: pb3 from 'tachyons';
   composes: tc from 'tachyons';
   composes: layout-aside from '../../static/assets/css/theme.css';
 }
-
 .asideLeft {
   composes: pl4-ns from 'tachyons';
   composes: layout-aside from '../../static/assets/css/theme.css';
@@ -99,4 +96,8 @@
 .faq strong {
   display: block;
   margin-bottom: -0.75rem;
+}
+.faqItem {
+  composes: left--1 from 'tachyons';
+  composes: relative from 'tachyons';
 }
